--- a/ai-weather-app/src/index.css
+++ b/ai-weather-app/src/index.css
@@ -75,8 +75,9 @@ button:hover {
 
 .weather-info p {
   margin: 0;
-  font-size: 24px;
+  font-size: 16px;
   color: #555;
+  font-weight: normal;
 }
 
 /* AI Insight box styling */
@@ -161,9 +162,9 @@ h3 {
 }
 
 .main-weather-info .description {
-  font-size: 18px;
-  color: #666;
-  margin: 0;
+  font-size: 16px;
+  color: #555;
+  font-weight: normal;
 }
 
 .main-weather-info .icon {
