--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,8 @@
 /* General styling */
 body {
   margin: 0;
-  background-color: #6ea0d1;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  background-image: linear-gradient(to bottom, #E0BBE4, #D5C1E0); /* گرادیانت یاسی روشن */
+  font-family: 'Segoe UI', 'Roboto', 'Helvetica Neue', sans-serif; /* بهبود فونت‌ها */
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
@@ -61,11 +59,13 @@ button:hover {
   align-items: center;
   gap: 10px;
 }
+
 .main-weather-info .temp {
   font-weight: 700;
   font-size: 48px;
   color: #333;
 }
+
 .main-weather-info .description {
   font-size: 16px;
   color: #555;
@@ -91,7 +91,6 @@ h3 {
   display: flex;
   align-items: center;
   gap: 20px;
-  font-family: 'Segoe UI', sans-serif;
   color: #333; /* Dark text for readability */
 }
 
@@ -147,6 +146,7 @@ h3 {
   padding-bottom: 40px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
+
 .weekly-forecast .days {
   display: grid;
   grid-template-columns: repeat(5, 1fr);
